@@ -1,5 +1,9 @@
 2003-04-02  Ross Burton  <ross@burtonini.com>
 
+	* tests/glade-test.c: Whoops, fix some compile errors.
+
+2003-04-02  Ross Burton  <ross@burtonini.com>
+
 	* data/sound-juicer.glade: Added format buttons to the prefs
 	dialog.
 	* tests/glade-test.c: More poking at setting the encoding format,
